[package]
name = "rfid-supply-chain"
version = "0.1.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
crc = "^1.0.0"
openssl = "0.10.32"
structopt = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sled = "0.34.6"
serde_json = "1.0.64"
base64 = "0.13.0"
reqwest = { version = "0.11.2", features = ["json"] }
config = "0.11.0"