[package]
name = "models"
version = "0.1.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
crc = "^1.0.0"
openssl = "0.10.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13.0"
